WIP manage execution of JAVAFX application on Mac OS/Unix.